LP2065344 AngCirc: color repairs for dark mode

--- a/Open-ILS/src/eg2/src/app/staff/circ/patron/bills.component.css
+++ b/Open-ILS/src/eg2/src/app/staff/circ/patron/bills.component.css
@@ -24,7 +24,7 @@
 
 .patron-bills-summary li:nth-child(3n+1),
 .patron-bills-summary li:nth-child(3n+3) {
-  background-color: rgb(248, 248, 248);
+  background-color: var(--bs-body-bg-alt);
 }
 
 .patron-bills-summary li span:first-child {
